--- a/x1/build.gradle
+++ b/x1/build.gradle
@@ -15,6 +15,10 @@ repositories {
 	mavenCentral()
 }
 
+tasks.withType(JavaCompile).each {
+	it.options.compilerArgs.add('--enable-preview')
+}
+
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
